margins fixed on smaller screens, navbar and footer responsivity tidied up (footer not perfect yet)

--- a/src/scss/_bottom.scss
+++ b/src/scss/_bottom.scss
@@ -15,8 +15,8 @@
     z-index: 2;
     border: 0;
     @media (max-width: 800px) {
-      width: 100%;
-      left: 0;
+      width: 80%;
+      left: 10%;
       margin: auto;
     }
   }
