--- a/src/scss/_coffee.scss
+++ b/src/scss/_coffee.scss
@@ -12,7 +12,7 @@
     width: 800px;
     margin: 50px 0;
 
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 820px) {
       width: 80%;
     }
   }
@@ -89,7 +89,7 @@
   padding-left: 15px;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 820px) {
   .card__holder {
     display: flex;
     flex-direction: column;
