--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -8,7 +8,7 @@
     "top top top"
     "times book address";
   @media (max-width: 820px) {
-    width: 100%;
+    width: 80%;
     grid-template-columns: 1fr;
     grid-template-rows: auto auto auto auto;
     grid-template-areas:
