--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -57,22 +57,21 @@ h3 {
   display: flex;
   justify-content: center;
   background-color: #f7f9f9;
-  padding: 2%;
   @media (max-width: 820px) {
     height: auto;
   }
 
   &__holder {
+    width: 800px;
     display: flex;
     align-items: center;
-    width: 800px;
+    justify-content: space-between;
     margin: 0 auto;
     height: auto;
-    justify-content: space-between;
     @media (max-width: 820px) {
       width: 80%;
       flex-flow: row wrap;
-      justify-content: center;
+      justify-content: space-evenly;
     }
   }
 
@@ -80,24 +79,41 @@ h3 {
     height: 100px;
     width: auto;
     background-color: $headbkg;
+    @media (max-width: 820px) {
+      width: 100%;
+      height: 200px;
+    }
   }
 
   &__links {
-    width: 70%;
+    width: max-content;
     display: flex;
+    flex-wrap: nowrap;
     justify-content: end;
     @media (max-width: 820px) {
       width: 80%;
       flex-flow: row wrap;
-      justify-content: center;
+      justify-content: space-evenly;
+    }
+    @media (max-width: 600px) {
+      width: 100%;
+      flex-flow: row wrap;
+      justify-content: space-between;
+    }
+    @media (max-width: 450px) {
+      width: 100%;
+      flex-flow: column nowrap;
+      align-items: center;
     }
   }
 
   &__link {
-    font-size: 0.8em;
+    padding: 0 0 0 1rem;
     color: #838484;
     text-decoration: none;
-    padding-left: 20px;
+    @media (max-width: 820px) {
+      padding: 0;
+    }
   }
 }
 
@@ -116,10 +132,10 @@ h3 {
   padding: 70px 0;
   color: white;
   background-color: $footbkg;
-  @media (max-width: 820px) {
-    flex-flow: row wrap;
-    justify-content: center;
-  }
+  // @media (max-width: 820px) {
+  //   flex-flow: row wrap;
+  //   justify-content: center;
+  // }
   &__instagram {
     text-align: center;
     padding-bottom: 10px;
